# webCrawler_AI_Chatbot

./: api.py  hustle.py  jobs.py  main.py  pyproject.toml
docs/: design.md
frontend/src/: App.jsx  index.css
utils/: __init__.py  embedder.py  scraper.py  vectorstore.py
