[project]
name = "opencode-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "codetrain[dev]",
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.41.0",
]

[tool.uv.sources]
codetrain = { git = "https://github.com/Speedykom/CodeTrain.git" }
